# lock.host

./: .dockerignore  .gitignore  Dockerfile.host  Dockerfile.runtime  Dockerfile.rust  README.md  justfile
.github/workflows/: run.yml
apk/: Dockerfile.fetch  Dockerfile.proxy  README.md  package-lock.json  package.json  proxy.js  repositories.fetch  repositories.serve
apk/alpine/v3.18/main/x86_64/: bash-5.2.15-r5.apk  binutils-2.40-r8.apk  brotli-libs-1.0.9-r14.apk  build-base-0.5-r3.apk  ca-certificates-20241121-r1.apk  curl-8.12.1-r0.apk  file-5.45-r0.apk  fortify-headers-1.1-r3.apk  gdbm-1.23-r1.apk  git-2.40.4-r0.apk  git-perl-2.40.4-r0.apk  gmp-6.2.1-r3.apk  iptables-1.8.9-r2.apk  isl26-0.26-r1.apk  libatomic-12.2.1_git20220924-r10.apk  libbz2-1.0.8-r5.apk  libc-dev-0.7.2-r5.apk  libcurl-8.12.1-r0.apk  libexpat-2.7.0-r0.apk  libffi-3.4.4-r2.apk  libgcc-12.2.1_git20220924-r10.apk  libgomp-12.2.1_git20220924-r10.apk  libidn2-2.3.4-r1.apk  libmagic-5.45-r0.apk  libmnl-1.0.5-r1.apk  libncursesw-6.4_p20230506-r0.apk  libnftnl-1.2.5-r1.apk  libpanelw-6.4_p20230506-r0.apk  libpsl-0.21.5-r0.apk  libstdc++-12.2.1_git20220924-r10.apk  libunistring-1.1-r1.apk  make-4.4.1-r1.apk  mpc1-1.3.1-r1.apk  mpdecimal-2.5.1-r2.apk  (+15 more)
node/: atsocat.js  atsocat.sh  attest-duplex.js  attest-http.js  attest-key-server.js  attest-key-server.sh  attest-parse.js  attest-server.js  attest-socat.js  attest.js  cache.js  dispatch.js  dns.js  fetch.js  hash.sh  host.js  host.sh  package-lock.json  package.json  runtime.js  sockopt.js  streams.js  vsock.js
rust/: Cargo.toml
rust/src/: cert.rs
(+6 files in other folders)
