[package]
name = "lockhost-runtime"
version = "0.9.1"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-vsock = "0.5.0"
aws-nitro-enclaves-nsm-api = "=0.4.0"
aws-nitro-enclaves-cose = { version = "0.5.2", optional = true }
openssl = { version = "0.10.68", features = ["vendored"], optional = true }
serde_bytes = "0.11.15"
ciborium = "0.2.2"
base64 = "0.13"
hex = "0.4.3"

[features]
default = []
ssl = ["aws-nitro-enclaves-cose", "openssl"]
